[package]
name = "instagrouper"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
jiff = { version = "0.2.17", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
size = { version = "0.5.0", features = [] }
uuid = { version = "1.19.0", features = ["v7"] }
